examples/test/testpolicy6213.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6213
  namespace: namespace86
spec:
  podSelector:
    matchLabels:
      key26: value42
      key20: value44
      key42: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value45
          key0: value12
          key16: value46
      podSelector:
        matchLabels:
          key27: value49
